jitfailure-dolfin_expression_c5e5962788ecb1e1b74405b53f8100f8/error.log
/var/folders/d_/kgfl6g_j6fj9v6p9j75gh8_w0000gn/T/tmpvutilgqw/dolfin_expression_c5e5962788ecb1e1b74405b53f8100f8.cpp:63:32: error: no matching function for call to 'log'
          values[0] = - (10  / log(b/a)) * log(x[0]/a) + 10;
                               ^~~
/Users/emmanuelflores/miniconda3/envs/fenics/include/dolfin/log/log.h:103:8: note: candidate function not viable: requires at least 2 arguments, but 1 was provided
  void log(int debug_level, std::string msg, ...);
       ^
/var/folders/d_/kgfl6g_j6fj9v6p9j75gh8_w0000gn/T/tmpvutilgqw/dolfin_expression_c5e5962788ecb1e1b74405b53f8100f8.cpp:63:30: error: invalid operands to binary expression ('int' and 'void')
          values[0] = - (10  / log(b/a)) * log(x[0]/a) + 10;
                         ~~  ^ ~~~~~~~~
/var/folders/d_/kgfl6g_j6fj9v6p9j75gh8_w0000gn/T/tmpvutilgqw/dolfin_expression_c5e5962788ecb1e1b74405b53f8100f8.cpp:63:44: error: no matching function for call to 'log'
          values[0] = - (10  / log(b/a)) * log(x[0]/a) + 10;
                                           ^~~
/Users/emmanuelflores/miniconda3/envs/fenics/include/dolfin/log/log.h:103:8: note: candidate function not viable: requires at least 2 arguments, but 1 was provided
  void log(int debug_level, std::string msg, ...);
       ^
3 errors generated.
